--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   margin: 0;
 }
+
+html,
+body,
+#root {
+  height: 100%;
+}
